# workflowy-mcp

./: .blackrc  .env.example  .gitignore  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  install.ps1  install.sh  lint-log.txt  mypy.ini  pyproject.toml  quick-install.sh  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
specs/001-this-is-a/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-this-is-a/contracts/: mcp-tools.json
src/workflowy_mcp/: __init__.py  __main__.py  config.py  server.py  transport.py
src/workflowy_mcp/client/: __init__.py  api_client.py  rate_limit.py  retry.py
src/workflowy_mcp/middleware/: errors.py  logging.py
src/workflowy_mcp/models/: __init__.py  config.py  errors.py  node.py  requests.py
tests/: conftest.py  test_utils.py  tool_adapters.py
tests/contract/: test_complete_node.py  test_create_node.py  test_delete_node.py  test_get_node.py  test_list_nodes.py  test_search_nodes.py  test_uncomplete_node.py  test_update_node.py
tests/integration/: conftest.py  test_auth_errors.py  test_node_lifecycle.py  test_search_filter.py
tests/performance/: test_response_times.py
tests/unit/: test_models.py  test_rate_limit.py  test_retry.py
